# kali-kalihimx

./: README.md  components.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
my-package/: Cargo.toml
my-package/src/: lib.rs
src/: app.d.ts  app.html  app.postcss  hooks.server.ts
src/lib/: helpers.ts  index.ts  schemas.ts  stores.ts  supabase.ts  types.ts  utils.ts
src/lib/assets/icons/: hands-holding-circle.svelte  index.ts  people-group.svelte
src/lib/assets/images/: index.ts
src/lib/components/: Banner.svelte  MatchHistory.svelte  Navbar.svelte  PowerCards.svelte  Rank.svelte  RankLogo.svelte  Sidebar.svelte  UpcomingMatch.svelte  UserAvatar.svelte  arnis-results.svelte  badges.svelte  card-battle.svelte  index.ts
src/lib/components/rubrics-table/: index.ts  table.svelte
src/lib/components/sections-table/: index.ts  sections-table.svelte
src/lib/components/users-table/: data-table-actions.svelte  data-table-filter.svelte  (+5 more)
src/lib/pkg/: my_package_bg.js  my_package_bg.wasm
src/lib/server/: index.ts
src/lib/types/: matches.ts  schemas.ts
src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.server.ts  +page.svelte  login-form.svelte
src/routes/card-battle/: +page.server.ts  +page.svelte  +page.ts  battle-card.svelte
src/routes/guide/: +page.server.ts  +page.svelte  +page.ts  arnis-guide.svelte  card-battle-guide.svelte  power-cards-guide.svelte
src/routes/leaderboards/: +layout.svelte  +page.server.ts  +page.svelte
src/routes/rubrics/: +page.server.ts  +page.svelte  rubric-form.svelte
(+54 files in other folders)
