[package]
name = "my-package"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# webp = "0.2.6"
image = { version = "0.24.7", features = ["avif-encoder"] }
wasm-bindgen = "0.2.88"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true
